--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Isaac Yuen</title>
+  <title>Index</title>
 </head>
 <body>
     <p>Welcome to my site.</p>
