--- a/index.html
+++ b/index.html
@@ -5,6 +5,6 @@
 </head>
 <body>
     <p>Welcome to my site.</p>
-    <image src="/images/1863011_Ho Piu Yuen.jpg" width="320" alt="Isaac Yuen">
+    <image src="/images/1863011_Ho Piu Yuen.jpg" width="320" alt="Isaac Yuen"></image>
     <p></p>
 </body>
