--- a/index.html
+++ b/index.html
@@ -6,5 +6,5 @@
 <body>
     <p>Welcome to my site.</p>
     <image src="/images/1863011_Ho Piu Yuen.jpg" width="320" alt="Isaac Yuen"></image>
-    <p></p>
+    <p>Experienced Member with a demonstrated history of working in the computer software industry. Skilled in Japanese, Python...<a href="https://www.linkedin.com/in/isaac-ho-piu-yuen/">(More on Linkedin.com)</a></p>
 </body>
