--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <p>Welcome to my site.</p>
     <div>
       <img src="images/1863011_Ho Piu Yuen.jpg" width="320" alt="Isaac Yuen">
-      Isaac Yuen
+      <br>Isaac Yuen
     </div>
     
     <p>Experienced Member with a demonstrated history of working in the computer software industry. Skilled in Japanese, Python...<a href="https://www.linkedin.com/in/isaac-ho-piu-yuen/">(More on Linkedin.com)</a></p>
