--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
 <head>
   <title>Index</title>
+  <link rel="stylesheet" type="text/css" src="css/styles.css">
 </head>
 <body>
     <p>Welcome to my site.</p>
@@ -10,5 +11,5 @@
       <br>Isaac Yuen
     </div>
     
-    <p>Experienced Member with a demonstrated history of working in the computer software industry. Skilled in Japanese, Python...<a href="https://www.linkedin.com/in/isaac-ho-piu-yuen/">(More on Linkedin.com)</a></p>
+    <p class="pp">Experienced Member with a demonstrated history of working in the computer software industry. Skilled in Japanese, Python...<a href="https://www.linkedin.com/in/isaac-ho-piu-yuen/">(More on Linkedin.com)</a></p>
 </body>
